# rotation-desk

./: .env  README.md  build.sh  claude_engine.py  community_scorer.py  community_tracker.py  defillama.py  index.html  package-lock.json  package.json  requirements.txt  rotation_intel.session  run.sh  server.py  telegram.py
config/: channels.py  communities.py
frontend/: settings.html
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  generate-tray-icons.sh
src-tauri/src/: lib.rs  main.rs
